--- a/antora.yml
+++ b/antora.yml
@@ -6,3 +6,12 @@ asciidoc:
     page-editable: true
 nav:
   - modules/ROOT/core-nav.adoc
+  - modules/web/web-nav.adoc
+  - modules/microservices/microservices-nav.adoc
+  - modules/data/data-nav.adoc
+  - modules/messaging/messaging-nav.adoc  
+  - modules/configuration/configuration-nav.adoc    
+  - modules/observability/observability-nav.adoc  
+  - modules/batch/batch-nav.adoc
+  - modules/cloud-platforms/cloud-platforms-nav.adoc 
+  - modules/app-orchestraction/app-orchestration-nav.adoc  
