--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,4 +16,5 @@ jobs:
         with:
           owner: markpollack
           repo: springio-refresh-doc-site
+          workflow_file_name: deploy.yml
           github_token: ${{ secrets.G_ACCESS_TOKEN }}
