--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,6 @@ jobs:
         with:
           owner: markpollack
           repo: springio-refresh-doc-site
-          workflow_file_name: deploy.yml
+          workflow_file_name: publish.yml
           github_token: ${{ secrets.G_ACCESS_TOKEN }}
           github_user: ${{ github.repository_owner }}
